--- a/html/page_DDL.html
+++ b/html/page_DDL.html
@@ -89,7 +89,7 @@ Derived types are pointers, arrays and structures:
 
 int a = 10 ;
 
-int * pa = &a ;
+int * pa = &amp;a ;
 
 text [a] B = { "b1" , "b2" } ;
 
@@ -739,9 +739,9 @@ int a = 1 ;
 
 uint b = 2 ;
 
-Ptr ptr_a = &a ; 
+Ptr ptr_a = &amp;a ; 
 
-Ptr ptr_b = &b ;
+Ptr ptr_b = &amp;b ;
 
 </pre>
 
