--- a/html/page_DirTreeRun.html
+++ b/html/page_DirTreeRun.html
@@ -48,7 +48,7 @@ class <span class="Att">DirTreeRun</span> : NoCopy
    
    StrLen pathOfRoot(char buf[MaxPathLen+1]);
    
-   void apply(DirTreeProcType &proc);
+   void apply(DirTreeProcType &amp;proc);
  };
 
 </pre>
