--- a/html/page_DynObject.html
+++ b/html/page_DynObject.html
@@ -78,7 +78,7 @@ constructed using it's default constructor.
    
    DynObject(const DynObject&lt;T&gt; &amp;obj) = delete ;
    
-   DynObject&lt;T&gt; & operator = (const DynObject&lt;T&gt; &amp;obj) = delete ;
+   DynObject&lt;T&gt; &amp; operator = (const DynObject&lt;T&gt; &amp;obj) = delete ;
    
    // moving
    
