--- a/html/page_EchoDevice.html
+++ b/html/page_EchoDevice.html
@@ -69,7 +69,7 @@ class <span class="Att">EchoDevice</span> : public NoCopyBase&lt;PacketMultipoin
    
    ~EchoDevice();
    
-   void getStat(StatInfo &ret);
+   void getStat(StatInfo &amp;ret);
    
    uint64 getTraffic();
  };
