--- a/html/page_EthDevice.html
+++ b/html/page_EthDevice.html
@@ -280,7 +280,7 @@ struct <span class="Att">EthTxExt</span>
   
   // print object
   
-  void print(PrinterType &out) const;
+  void print(PrinterType &amp;out) const;
  };
 
 </pre>
@@ -309,7 +309,7 @@ struct <span class="Att">EthRxExt</span>
   
   // print object
   
-  void print(PrinterType &out) const;
+  void print(PrinterType &amp;out) const;
  };
 
 </pre>
