--- a/html/page_FeedBuf.html
+++ b/html/page_FeedBuf.html
@@ -78,7 +78,7 @@ The overflow flag is returned.
 <pre>
 
 template &lt;class T&gt;
-bool /* underflow */ <span class="Att">Pumpup</span>(PtrLen&lt;T&gt; &dst,PtrLen&lt;const T&gt; &amp;src);
+bool /* underflow */ <span class="Att">Pumpup</span>(PtrLen&lt;T&gt; &amp;dst,PtrLen&lt;const T&gt; &amp;src);
 
 </pre>
 
