--- a/html/page_LineInput.html
+++ b/html/page_LineInput.html
@@ -45,7 +45,7 @@ class <span class="Att">LineInput</span> : NoCopy
   public:
   
    template &lt;class ... SS&gt;
-   explicit LineInput(SS && ... ss);
+   explicit LineInput(SS &amp;&amp; ... ss);
    
    ~LineInput() {}
    
