--- a/html/page_OwnPtr.html
+++ b/html/page_OwnPtr.html
@@ -155,7 +155,7 @@ from a function (this is impossible with a local variable):
 
 <pre>
 
-void func(OwnPtr&lt;C&gt; &ret)
+void func(OwnPtr&lt;C&gt; &amp;ret)
  {
   OwnPtr&lt;C&gt; ptr( new C() );
 
