--- a/html/page_PKE.html
+++ b/html/page_PKE.html
@@ -227,7 +227,7 @@ class ProxySet_CryptID : public StringSetScan
 
    ProxySet_CryptID();
 
-   void map(CryptID &ret) const;
+   void map(CryptID &amp;ret) const;
  };
 
 /* enum HashID */
@@ -251,7 +251,7 @@ class ProxySet_HashID : public StringSetScan
 
    ProxySet_HashID();
 
-   void map(HashID &ret) const;
+   void map(HashID &amp;ret) const;
  };
 
 /* enum DHGroupID */
@@ -272,7 +272,7 @@ class ProxySet_DHGroupID : public StringSetScan
 
    ProxySet_DHGroupID();
 
-   void map(DHGroupID &ret) const;
+   void map(DHGroupID &amp;ret) const;
  };
 
 /* struct CryptAlgoSelect */
