--- a/html/page_Paths.html
+++ b/html/page_Paths.html
@@ -128,13 +128,13 @@ struct <span class="Att">PathBase</span>
 
   static bool IsTilde(char ch) { return ch=='~'; }
   
-  static bool IsDot(StrLen name) { return name.len==1 && name[0]=='.' ; }
+  static bool IsDot(StrLen name) { return name.len==1 &amp;&amp; name[0]=='.' ; }
   
-  static bool IsDotDot(StrLen name) { return name.len==2 && name[0]=='.' && name[1]=='.' ; }
+  static bool IsDotDot(StrLen name) { return name.len==2 &amp;&amp; name[0]=='.' &amp;&amp; name[1]=='.' ; }
   
   static bool IsSpecial(StrLen name) { return IsDot(name) || IsDotDot(name) ; }
 
-  static bool IsTilde(StrLen name) { return name.len==1 && name[0]=='~' ; }
+  static bool IsTilde(StrLen name) { return name.len==1 &amp;&amp; name[0]=='~' ; }
   
   static void TurnSlash(PtrLen&lt;char&gt; name);
 
