--- a/html/page_PrintRatio.html
+++ b/html/page_PrintRatio.html
@@ -54,7 +54,7 @@ class <span class="Att">PrintRatio</span>
 
    using PrintOptType = RatioPrintOpt ;
 
-   void print(PrinterType &out,PrintOptType opt) const;
+   void print(PrinterType &amp;out,PrintOptType opt) const;
  };
 
 </pre>
