--- a/html/page_Scope.html
+++ b/html/page_Scope.html
@@ -48,7 +48,7 @@ class <span class="Att">Scope</span> : NoCopy
    ~Scope();
 
    template &lt;class P&gt;
-   static bool Print(P &&out);
+   static bool Print(P &amp;out);
  };
 
 </pre>
