--- a/html/page_Signal.html
+++ b/html/page_Signal.html
@@ -176,7 +176,7 @@ class Subscriber
 
   public:
 
-   Subscriber() : connector(this,&Subscriber::method) {}
+   Subscriber() : connector(this,&amp;Subscriber::method) {}
  };
 
 </pre>
