--- a/html/page_String.html
+++ b/html/page_String.html
@@ -97,7 +97,7 @@ class <span class="Att">String</span>
 
      public:
 
-      operator const String & () const { return str; }
+      operator const String &amp; () const { return str; }
 
       static StaticObject Object;
     };
