--- a/html/page_Taxonomy.html
+++ b/html/page_Taxonomy.html
@@ -293,7 +293,7 @@ class SomeClass
 
    T * getPtr() const; // the current object
    
-   T & operator * () const; // the current object
+   T &amp; operator * () const; // the current object
    
    T * operator -> () const; // the current object
  };
