--- a/html/page_TextLabel.html
+++ b/html/page_TextLabel.html
@@ -122,7 +122,7 @@ The next class is <b>NumTextLabel</b>.
 
 <pre>
 
-unsigned <span class="Att">GetTextLabelNumber</span>(unsigned &Next);
+unsigned <span class="Att">GetTextLabelNumber</span>(unsigned &amp;Next);
 
 template &lt;TextLabelType T&gt;
 class <span class="Att">NumTextLabel</span> : public TextLabel
