--- a/html/page_TreeMaps.html
+++ b/html/page_TreeMaps.html
@@ -47,7 +47,7 @@ Constant maps propagate constantness to its elements.
 <p>
 This is the first map, built on red-black tree algorithms. There is the additional template parameter 
 <b>KRef</b>. It is used to specify a key in methods. It is defaulted to the <b>K</b>, another
-typical choice would be the <b>const K &</b>.
+typical choice would be the <b>const K &amp;</b>.
 </p>
 
 <pre>
