--- a/html/page_UIntSplit.html
+++ b/html/page_UIntSplit.html
@@ -54,7 +54,7 @@ class <span class="Att">UIntSplit</span>
   
    UIntSmall operator [] (unsigned index) const { return buf[index]; }
  
-   UIntSmall & operator [] (unsigned index) { return buf[index]; }
+   UIntSmall &amp; operator [] (unsigned index) { return buf[index]; }
    
    PtrLen&lt;UIntSmall&gt; ref() { return Range(buf); }
 
