--- a/html/page_XCore_DevPlanInit.html
+++ b/html/page_XCore_DevPlanInit.html
@@ -108,7 +108,7 @@ PlanInitObject&lt;Empty,PlanInitReq&lt;GetPlanInitNode_DevIntHandle&gt; &gt; Obj
 
 using namespace Private_DevPlanInit;
 
-PlanInitNode * <span class="Att">GetPlanInitNode_Dev</span>() { return &Object; }
+PlanInitNode * <span class="Att">GetPlanInitNode_Dev</span>() { return &amp;Object; }
 
 } // namespace Dev
 } // namespace CCore
