--- a/html/page_XCore_PlanInit_CCore.html
+++ b/html/page_XCore_PlanInit_CCore.html
@@ -81,7 +81,7 @@ PlanInitObject&lt;Empty,PlanInitReq&lt;GetPlanInitNode_TaskCoreExt&gt;
 
 using namespace Private_PlanInit;
 
-PlanInitNode * <span class="Att">GetPlanInitNode_CCore</span>() { return &Object; }
+PlanInitNode * <span class="Att">GetPlanInitNode_CCore</span>() { return &amp;Object; }
 
 } // namespace CCore
 
