--- a/html/page_XCore_atexit.html
+++ b/html/page_XCore_atexit.html
@@ -118,9 +118,9 @@ struct Func
 
 ....
 
-bool FuncBlock::Push(const Func &func);
+bool FuncBlock::Push(const Func &amp;func);
 
-bool FuncBlock::Pop(Func &ret);
+bool FuncBlock::Pop(Func &amp;ret);
 
 } // namespace Private_atexit
 
