--- a/html/page_XCore_gcc.html
+++ b/html/page_XCore_gcc.html
@@ -242,7 +242,7 @@ In <b>type_traits</b> the following sections must be switched off:
 
 <pre>
 
-# if 0 // defined (__UINT_LEAST16_TYPE__) && defined(__UINT_LEAST32_TYPE__)
+# if 0 // defined (__UINT_LEAST16_TYPE__) &amp;&amp; defined(__UINT_LEAST32_TYPE__)
 
 </pre>
 
