--- a/html/page_Logging.html
+++ b/html/page_Logging.html
@@ -341,7 +341,7 @@ class <span class="Att">LogMsg&lt;Cat,Stamp,TT...&gt;</span> : public LogMsgBase
    
   public: 
   
-   LogMsg(Cat cat,const char *format_,const TT & ... tt)
+   LogMsg(Cat cat,const char *format_,const TT &amp; ... tt)
     : LogMsgBase&lt;Cat,Stamp&gt;(cat),format(format_),data(tt...) {}
  };
 
