--- a/html/page_NoMutex.html
+++ b/html/page_NoMutex.html
@@ -55,7 +55,7 @@ class <span class="Att">NoMutex</span> : NoCopy
    
    struct Lock : NoCopy
     {
-     explicit Lock(NoMutex &) {}
+     explicit Lock(NoMutex &amp;) {}
     };
  };
 
