--- a/html/page_Symbol.html
+++ b/html/page_Symbol.html
@@ -63,7 +63,7 @@ int <span class="Att">ToChar</span>(Symbol ch);
 
 ulen <span class="Att">SymbolLen</span>(Symbol ch);
 
-StrLen <span class="Att">SymbolRange</span>(const Symbol &ch);
+StrLen <span class="Att">SymbolRange</span>(const Symbol &amp;ch);
 
 Symbol <span class="Att">PeekSymbol</span>(StrLen text); // +text
 
@@ -113,7 +113,7 @@ int <span class="Att">ToChar</span>(char ch);
 
 ulen <span class="Att">SymbolLen</span>(char ch);
 
-StrLen <span class="Att">SymbolRange</span>(const char &ch);
+StrLen <span class="Att">SymbolRange</span>(const char &amp;ch);
 
 </pre>
 
@@ -144,11 +144,11 @@ int <span class="Att">ToChar</span>(Char ch);
 
 Char <span class="Att">PeekChar</span>(StrLen text) // +text
 
-Char <span class="Att">CutChar</span>(StrLen &text); // +text
+Char <span class="Att">CutChar</span>(StrLen &amp;text); // +text
 
 Char <span class="Att">PeekChar_guarded</span>(StrLen text); // +text
 
-Char <span class="Att">CutChar_guarded</span>(StrLen &text); // +text
+Char <span class="Att">CutChar_guarded</span>(StrLen &amp;text); // +text
 
 </pre>
 
